--- a/grsmu_diplom/users/templates/users/profile_page.html
+++ b/grsmu_diplom/users/templates/users/profile_page.html
@@ -11,9 +11,9 @@
 		    	    <hr>
                     <div  class="card-text">
 						{% if user.profile.profile_pic %}
-						<p><img src="{{ user.profile.profile_pic.url }}" alt="Profile Picture" width="100" height="100"></p>
+						<p><img src="{{ user.profile.profile_pic.url }}" alt="Profile Picture" width="100" ></p>
 						{% else %}
-						<p><img src="{% static 'images/user.jpg' %}" alt="Profile Picture" width="100" height="100"></p>
+						<p><img src="{% static 'images/user.jpg' %}" alt="Profile Picture" width="100"></p>
                        	{% endif %}
                         <p class="text-muted mb-0" style="font-size: 12px">Имя:</p>
                         <p>{{ user.username }}</p>
