--- a/grsmu_diplom/users/templates/users/profile_page.html
+++ b/grsmu_diplom/users/templates/users/profile_page.html
@@ -2,6 +2,19 @@
 {% load static %}
 {% block page_content %}
 
+
+<script>
+    $(document).ready(function(){
+        $("input[type='radio']").click(function(){
+        	var radioValue = $("input[name='profile_picture']:checked").val();
+            if(radioValue){
+                document.getElementById("picture-name").value = radioValue;
+            }
+        });
+    });
+</script>
+
+
 	<br><br>
 	<div class="container mx-auto" style="max-width: 1200px; background-color: rgb(255 255 255 / 75%); backdrop-filter: blur(100px); padding-top: 20px; padding-bottom: 15px; border-radius: 30px;">
 	    <div class="row">
@@ -11,7 +24,7 @@
 		    	    <hr>
                     <div  class="card-text">
 						{% if user.profile.profile_pic %}
-						<p><img src="{{ user.profile.profile_pic.url }}" alt="Profile Picture" width="100" height="100"></p>
+						<p><img src="{% static user.profile.profile_pic %}" alt="Profile Picture" width="100" height="100"></p>
 						{% else %}
 						<p><img src="{% static 'images/user.jpg' %}" alt="Profile Picture" width="100" height="100"></p>
                        	{% endif %}
@@ -113,19 +126,36 @@
 		        <div class="modal-body">
 			        <form method="post" enctype="multipart/form-data">
 			          	{% csrf_token %}
-			          	<p>Сменить фото: {{ profile_form.profile_pic }}</p>
+<!--			          	<p >Сменить фото: {{ profile_form.profile_pic }}</p>-->
 			          	<p>Логин: {{ user_form.username }}</p>
         				<p>Email: {{ user_form.email }}</p>
         				<p>Курс: {{ profile_form.course }}</p>
 						<a href="/user/password_reset">Сменить пароль</a>
 		        </div>
-		      	<div class="modal-footer">
+
+				<p>Фото профиля:</p>
+				  <div>
+					{% for ph in profile_pics_list %}
+					{% if ph == user.profile.profile_pic %}
+					<input type="radio" id="pictureChoice1" name="profile_picture" value="{{ ph }}" checked>
+					{% else %}
+					<input type="radio" id="pictureChoice1" name="profile_picture" value="{{ ph }}">
+					{% endif %}
+					<label for="pictureChoice1"><img src="{% static ph %}" style="max-height: 100px;"></label>
+				  	{% endfor %}
+				  </div>
+					<input type="hidden" id="picture-name" name="picture-name" value="0">
+		      		<div class="modal-footer">
 		        	<button type="submit" name = "user_change" class="btn btn-primary">Сохранить</button>
+		        	<button type="button">Check</button>
 		        	</form>
+
 		        	<button type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
 		        </div>
 		    </div>
 	  	</div>
 	</div>
   	</div>
+  	</div>
 {% endblock %}
+
